{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "1943b6dc-1b58-4af0-ae52-eb2e1b21cde4",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "7093514d-5e69-4d2b-8f97-65c22a89a778",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "fceb8011-8fdb-4f00-8262-762a16eac7ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "36baf68f-d9db-463a-a958-86ae1a7b7c60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cf0bd5c-e781-403b-b7ad-3fd8776bcacf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83431a76-b82d-4e5f-8e75-1aaf7a77bad7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ace92933-7556-4d2e-b8bd-9e6b47b56036",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControl",
            "id": "3fb4067c-bbd7-4afa-850c-1835283205e2",
            "actions": [
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "c9df3c69-1807-4a39-b8e8-75929a4a3345",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "6270bf24-9a26-49d6-a905-d411dd2b65c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrollButton",
                    "type": "Button",
                    "id": "073a9354-d421-45eb-9e7c-15dfd01eecb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b464664-93ba-4ac3-9b4b-c5e89be97a63",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61a936f4-5f57-4bb8-9d4a-055619a269b2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b7f9765-69f7-4c49-8ae6-94fa650394c4",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}